syntax = "proto3";

import "grpcCommon/msg_error.proto"; // 错误码
package personal;
option java_multiple_files = true;
option java_package = "com.wanfang.personal";
option objc_class_prefix = "WFPR";


// 找回(获取)密码请求--通过邮箱
message PasswordByEmailRequest {
	oneof field_oneof {
		// 用户名和邮箱地址只需要其中之一
		string user_name = 3; // 用户名
		string email = 4; // 邮箱地址
	}
}
// 找回(获取)密码返回--通过邮箱
message PasswordByEmailResponse {
	string email = 1; // 用户邮箱 用于确认信息
	string user_name = 2; // 用户名 用于确认信息
	grpcCommon.GrpcError error = 3;
}

message PasswordEmailRequest {
	string email = 1; // 邮箱地址（发送重置密码链接）
}
message PasswordEmailResponse {
	grpcCommon.GrpcError error = 1;
}

// 找回密码(通过手机号)-请求
message PasswordByPhoneRequest {
    // 手机号
	string phone_number = 1;
	// 短信验证码
	string phone_captcha = 2;
	// 国际区号 如：中国：0086；
    string nation = 3;
    // 消息类型 目前仅支持“bind”
    string message_type = 4;
}

// 找回密码(通过手机号)-响应
message PasswordByPhoneResponse {
    // 用户id
	string user_id = 1;
	grpcCommon.GrpcError error = 2;
}


message PasswordUpdateRequest {
	string user_id = 1;
	string new_password = 2;
}

message PasswordUpdateResponse {
	grpcCommon.GrpcError error = 1;
}

message PasswordVerifyRequest {
	string user_id = 1;
	string password = 2;
}

message PasswordVerifyResponse {
	bool is_right = 1;
	grpcCommon.GrpcError error = 2;
}










